--- a/main.css
+++ b/main.css
@@ -218,6 +218,11 @@ label.error {
     min-height: 100vh !important;
     padding-top: 40px;
     text-align: center;
+    transition: all 0.3s ease-in-out;
+  }
+
+  .navbar-collapse {
+    text-align: center;
   }
 
   .logo img {
